--- a/index.html
+++ b/index.html
@@ -284,10 +284,12 @@
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
 					</div>
-					<span>
-						<p>Télécommande :</p>
-						<progress class="progress is-arduino2" value="5" max="100">5%</progress>
-					</span>
+					<div class="columns is-mobile">
+						<div class="column">
+							<p>Télécommande :</p>
+						</div>
+						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
+					</div>
 					<p>Application (Davide et Ugo) :</p>
 					<progress class="progress" value="30" max="100">30%</progress>
 					<p>Site (Antonin) :</p>
