--- a/index.html
+++ b/index.html
@@ -380,13 +380,16 @@
 					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
 					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
+					<figure style="padding: 0 18px 1rem 18px;" class="image is-128x128">
+						<img src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
+					</figure>
 					<!--<p style="padding: 0 18px 1rem 18px;">Fichier développé <a class="is-link" href="https://cdn.discordapp.com/attachments/807610088361164810/809157469791191070/APPLI_VOCAL.py" target="_blank">ici</a></p>-->
 				</div>
 				<button type="button" class="collapsible">17/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">On entame la modélisation 3D sur Fusion 360 !</p>
 					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenage et "roues".</p>
-					<p style="padding: 0 18px 1rem 18px;">Hâte de vir ça fonctionnel ! Pas vous ?</p>
+					<p style="padding: 0 18px 1rem 18px;">Hâte de voir ça fonctionnel ! Pas vous ?</p>
 				</div>
 			</div>
 		</div>
