--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
 					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
-					<figure style="padding: 0 18px 1rem 18px;" class="image is-128x128">
+					<figure style="padding: 0 18px 1rem 18px; width: 50%;" class="image">
 						<img src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
 					</figure>
 					<!--<p style="padding: 0 18px 1rem 18px;">Fichier développé <a class="is-link" href="https://cdn.discordapp.com/attachments/807610088361164810/809157469791191070/APPLI_VOCAL.py" target="_blank">ici</a></p>-->
