--- a/index.html
+++ b/index.html
@@ -746,17 +746,99 @@
 				<p class="title has-text-centered" id="information">
 				  Contact
 				</p>
-				<div class="content is-large">
-					<h1 class="is-white">Hello World</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan, metus ultrices eleifend gravida, nulla nunc varius lectus, nec rutrum justo nibh eu lectus. Ut vulputate semper dui. Fusce erat odio, sollicitudin vel erat vel, interdum mattis neque.</p>
-					<h2 class="is-white">Second level</h2>
-					<p>Curabitur accumsan turpis pharetra <strong>augue tincidunt</strong> blandit. Quisque condimentum maximus mi, sit amet commodo arcu rutrum id. Proin pretium urna vel cursus venenatis. Suspendisse potenti. Etiam mattis sem rhoncus lacus dapibus facilisis. Donec at dignissim dui. Ut et neque nisl.</p>
-					<ul>
-						<li>In fermentum leo eu lectus mollis, quis dictum mi aliquet.</li>
-						<li>Morbi eu nulla lobortis, lobortis est in, fringilla felis.</li>
-						<li>Aliquam nec felis in sapien venenatis viverra fermentum nec lectus.</li>
-						<li>Ut non enim metus.</li>
-					</ul>
+				<div class="container font-din has-text-centered" style="margin-top: 3rem; margin-bottom: 3rem;">
+					<div class="columns">
+						<div class="column">
+						</div>
+						<div class="column is-half is-two-thirds-tablet is-three-quarters-mobile has-background-white">
+							<div class="columns">
+								<div class="column" style="text-align: right;">
+									<p class="subtitle is-8">Par mail :</p>
+								</div>
+								<div class="column" style="text-align: left;">
+									<a class="button" href="mailto:info@arduitank.be">Cliquez ici</a>
+								</div>
+							</div>
+							<br/>
+							<form class="form" action="actions/message-site.php" method="get">
+								<div class="field is-horizontal">
+									<div class="field-label is-normal">
+										<label class="label">Nom</label>
+									</div>
+									<div class="field-body">
+										<div class="field">
+											<p class="control is-expanded has-icons-left">
+												<input class="input is-danger" type="text" placeholder="Nom" autocomplete="on" name="name" required>
+												<span class="icon is-small is-left">
+													<i class="fas fa-user"></i>
+												</span>
+											</p>
+										</div>
+									</div>
+								</div>
+	
+								<div class="field is-horizontal">
+									<div class="field-label is-normal">
+										<label class="label">Votre email</label>
+									</div>
+									<div class="field-body">
+										<div class="field">
+											<p class="control is-expanded has-icons-left">
+												<input class="input is-danger" type="email" placeholder="oups@gmaiL.com" autocomplete="on" name="email" required>
+												<span class="icon is-small is-left">
+													<i class="fas fa-envelope"></i>
+												</span>
+											</p>
+										</div>
+									</div>
+								</div>
+	
+								<div class="field is-horizontal">
+									<div class="field-label is-normal">
+										<label class="label">Sujet</label>
+									</div>
+									<div class="field-body">
+										<div class="field">
+											<div class="control">
+												<input class="input" type="text" placeholder="Le sujet du jour est Alphonse, le poisson du voisin !" name="subject">
+											</div>
+										</div>
+									</div>
+								</div>
+	
+								<div class="field is-horizontal">
+									<div class="field-label is-normal">
+										<label class="label">Message</label>
+									</div>
+									<div class="field-body">
+										<div class="field">
+											<div class="control">
+												<textarea class="textarea is-danger" placeholder="Dites nous ce qui vous chagrine ;)" name="message" required></textarea>
+											</div>
+										</div>
+									</div>
+								</div>
+	
+								<div class="field is-horizontal">
+									<div class="field-label">
+										<!-- Left empty for spacing -->
+									</div>
+									<div class="field-body">
+										<div class="field">
+											<div class="control has-text-right response">
+												<button class="button has-background-grey-dark has-text-white" type="submit" class="submit">
+													Envoyer
+												</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</form>
+							<br/>
+						</div>
+						<div class="column">
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
