--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
 					<div class="columns">
 						<div class="column">
 						</div>
-						<div class="column is-half is-two-thirds-tablet is-three-quarters-mobile has-background-white">
+						<div class="column is-half is-two-thirds-tablet is-three-quarters-mobile">
 							<div class="columns">
 								<div class="column" style="text-align: right;">
 									<p class="subtitle is-8">Par mail :</p>
