--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
 				<p class="title has-text-centered" id="information">
 				  Contact
 				</p>
-				<div class="content is-large">
+				<div class="content is-large has-text-centered">
 					<p class="subtitle is-8">Par mail : <a class="button" href="mailto:info@arduitank.be">Cliquez ici</a></p>
 				</div>
 				<form class="form" action="actions/message-site.php" method="get">
@@ -814,7 +814,7 @@
 						</div>
 						<div class="field-body">
 							<div class="field">
-								<div class="control has-text-right response">
+								<div class="control has-text-centered response">
 									<button class="button has-background-grey-dark has-text-white" type="submit" class="submit">
 										Envoyer
 									</button>
