--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 				<div class="content is-large has-text-centered">
 					<p class="subtitle is-8">Par mail : <a class="button" href="mailto:info@arduitank.be">Cliquez ici</a></p>
 				</div>
-				<form class="form" action="actions/message-site.php" method="get">
+				<form class="form is-white" action="actions/message-site.php" method="get">
 					<div class="field is-horizontal">
 						<div class="field-label is-normal">
 							<label class="label">Nom</label>
