--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 		.hero.is-dark a:hover:not(.navbar) {
 			color: white!important;
 		}*/
+		.label {
+			color: white;
+		}
 
 
 		div {
@@ -749,7 +752,7 @@
 				<div class="content is-large has-text-centered">
 					<p class="subtitle is-8">Par mail : <a class="button" href="mailto:info@arduitank.be">Cliquez ici</a></p>
 				</div>
-				<form class="form is-white" action="actions/message-site.php" method="get">
+				<form class="form" action="actions/message-site.php" method="get">
 					<div class="field is-horizontal">
 						<div class="field-label is-normal">
 							<label class="label">Nom</label>
