--- a/index.html
+++ b/index.html
@@ -385,11 +385,19 @@
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
 					<!--<p style="padding: 0 18px 1rem 18px;">Fichier développé <a class="is-link" href="https://cdn.discordapp.com/attachments/807610088361164810/809157469791191070/APPLI_VOCAL.py" target="_blank">ici</a></p>-->
 				</div>
-				<button type="button" class="collapsible">17/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
+				<button type="button" class="collapsible">16/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">On entame la modélisation 3D sur Fusion 360 !</p>
 					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenage et "roues".</p>
 					<p style="padding: 0 18px 1rem 18px;">Hâte de voir ça fonctionnel ! Pas vous ?</p>
+				</div>
+				<button type="button" class="collapsible">17/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Hop la boum ! La suite continue !</p>
+					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
+					<p style="padding: 0 18px;">Les différents éléments électronique servant pour le robot sont importés dans Fusion 360. Nous retrouvons, le RFID, l'ultrason, le servo moteur, le moteur pas à pas et évidement l'arduino nano.</p>
+					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester somairement lors d'un test.</p>
+					<p style="padding: 0 18px 1rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
 				</div>
 			</div>
 		</div>
