--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 					<p>Comme composants que l'on doit intégrer il y a :</p>
 					<ul>
 						<li>Sonar (ultrason)</li>
-						<li>Bras articule (servo Moteur)</li>
+						<li>Bras articulé (servo Moteur)</li>
 						<li>Lecteur TAG RFID => Start en Mode « compétition »</li>
 						<li>Afficheur LCD</li>
 						<li>LEDs</li>
