--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 		.content h2 {
 			color: white;
 		}
+		.content h3 {
+			color: white;
+		}
 		.progress.is-arduino1::-webkit-progress-value {
 			background-color: rgb(0, 129, 132);
 		}
@@ -262,12 +265,12 @@
 					<p>Nous sommes en 2ème année en école supérieur en automatisation. Dans le cadre du cours de robotique, nous avons décidé de faire un tank télécommandé.</p>
 					<p>Nous ne nous limitons pas qu'à de la programmation en C/C++ (Arduino) comme demandé, en effet nous développons aussi une application pour ordinateur ainsi que le site sur lequel vous vous trouvez actuellement.</p>
 					<h2>Consignes</h2>
-					<p>Purement pour le cours, nous devons respecter ces consignes :</p>
+					<h3>Purement pour le cours, nous devons respecter ces consignes :</h3>
 					<ul>
 						<li>Robot mobile</li>
 						<li>Radio commandée => Télécommande a réalisé avec un Arduino + Bluetooth + …</li>
 					</ul>
-					<p>Comme composants que l'on doit intégrer il y a :</p>
+					<h3>Comme composants que l'on doit intégrer il y a :</h3>
 					<ul>
 						<li>Sonar (ultrason)</li>
 						<li>Bras articulé (servo Moteur)</li>
