--- a/index.html
+++ b/index.html
@@ -757,13 +757,13 @@
 		
 		<div class="hero-body" id="contact">
 			<div class="container">
-				<p class="title has-text-centered" id="information">
+				<p class="title has-text-centered">
 				  Contact
 				</p>
 				<div class="content is-large has-text-centered">
 					<p class="subtitle is-8">Par mail : <a class="button" href="mailto:info@arduitank.be">Cliquez ici</a></p>
 				</div>
-				<form class="form" action="actions/message-site.php" method="get">
+				<form class="form" action="" method="get">
 					<div class="field is-horizontal">
 						<div class="field-label is-normal">
 							<label class="label">Nom</label>
