--- a/index.html
+++ b/index.html
@@ -402,6 +402,39 @@
 					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester somairement lors d'un test.</p>
 					<p style="padding: 0 18px 1rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
 				</div>
+				<button type="button" class="collapsible">19/02/2021 - Impression 3D chaîne - Echec TPU, redesign</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Aïe aïe ! Coup dur ! C'était pas loin mais visiblement un soucis d'impression de la chaîne souple qui dévait être totalement impriméee en TPU.</p>
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812406562571812924/IMG_20210219_203215.jpg" alt="Chaîne en TPU fail moitié impression">
+					<p style="padding: 0 18px;">Nous ne baissons pas les bras !! Mais afin d'éviter de perdre trop de temps sur le réglage pour du TPU, reprenons ce que nous savons faire, le PLA !</p>
+					<p style="padding: 0 18px;">Le temps d'un redesign de la chaîne qui devient une multitude de maillons !</p>
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="Chaîne avec maillons">
+					<p style="padding: 0 18px">Forcément, on imprime pas une chaine comme ça ! On aurait pu tenter mais ça aurait été risqué ! Nous avons fait maillon par maillon ! ;-)</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image is-4by3">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812418638921465896/IMG_20210219_212007.jpg" alt="Un maillon imrpimé">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image is-4by3">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812451354441285632/IMG_20210219_233010.jpg" alt="7 maillons de chaîne">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image is-4by3">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/812453817111019580/IMG_20210219_234100.jpg" alt="8 maillons de chaîne">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px 1rem 18px;">C'est que cela prend forme tout ça !! Une nuit et tout sera imrpimé ! :p</p>
+				</div>
 			</div>
 		</div>
 
