--- a/index.html
+++ b/index.html
@@ -450,21 +450,21 @@
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image is-4by3">
-								<img src="http://arduitank.be/img/banner.png" alt="Placeholder image">
+								<img src="http://arduitank.be/img/banner.png" alt="Plan 2D du robot">
 							</figure>
 						</div>
 					</div>
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image is-4by3">
-								<img src="http://arduitank.be/img/banner.png" alt="Placeholder image">
+								<img src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="8 maillons de chaine">
 							</figure>
 						</div>
 					</div>
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image is-4by3">
-								<img src="http://arduitank.be/img/banner.png" alt="Placeholder image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg" alt="Une chaîne complète">
 							</figure>
 						</div>
 					</div>
