--- a/index.html
+++ b/index.html
@@ -50,11 +50,6 @@
 
 	<style>
 		.background-banner {
-			/*width: 100%;*/
-
-			/* The image used */
-			background-image: url(http://arduitank.be/img/banner.png);
-
 			/* Set a specific height */
 			min-height: 500px; 
 
@@ -63,6 +58,17 @@
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: cover;
+			
+			/* Space above and under the picture*/
+			padding: 10rem 0;
+		}
+		.background-2Dplan-robot {
+			/* The image used */
+			background-image: url(http://arduitank.be/img/banner.png);
+		}
+		.background-model3D-chaine {
+			/* The image used */
+			background-image: url(http://arduitank.be/img/banner.png);
 		}
 
 		/* Colors */
@@ -242,7 +248,7 @@
 			</nav>
 		</div>
 	
-		<div class="hero-body background-banner">
+		<div class="hero-body background-banner background-2Dplan-robot">
 			<!--<div class="container has-text-centered">
 				<p class="title" style="color: hsl(0, 0%, 21%)!important; font-size: 5rem; padding: 10rem 0 10rem 0;">
 					ArduiTank
@@ -304,7 +310,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner" style="padding: 10rem 0 10rem 0;">
+		<div class="hero-body background-banner background-model3D-chaine">
 		</div>
 		
 		<div class="hero-body" id="equipe">
@@ -363,7 +369,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner" style="padding: 10rem 0 10rem 0;">
+		<div class="hero-body background-banner background-2Dplan-robot">
 		</div>
 		
 		<div class="hero-body" id="actu">
@@ -438,7 +444,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner" style="padding: 10rem 0 10rem 0;">
+		<div class="hero-body background-banner background-2Dplan-robot">
 		</div>
 		
 		<div class="hero-body" id="galerie">
@@ -472,7 +478,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner" style="padding: 10rem 0 10rem 0;">
+		<div class="hero-body background-banner background-2Dplan-robot">
 		</div>
 		
 		<div class="hero-body" id="stats">
@@ -785,7 +791,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner" style="padding: 10rem 0 10rem 0;">
+		<div class="hero-body background-banner background-2Dplan-robot">
 		</div>
 		
 		<div class="hero-body" id="contact">
