--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		}
 		.background-model3D-chaine {
 			/* The image used */
-			background-image: url(http://arduitank.be/img/banner.png);
+			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg);
 		}
 
 		/* Colors */
