--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
 			/* The image used */
 			background-image: url(http://arduitank.be/img/banner.png);
 		}
-		.background-model3D-chaine {
+		.background-model3D-chain {
 			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg);
+		}
+		.background-2blanks-1chain {
+			/* The image used */
+			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/812778846465949696/IMG_20210220_211229.jpg);
 		}
 
 		/* Colors */
@@ -310,7 +314,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner background-model3D-chaine">
+		<div class="hero-body background-banner background-model3D-chain">
 		</div>
 		
 		<div class="hero-body" id="equipe">
@@ -369,7 +373,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner background-2Dplan-robot">
+		<div class="hero-body background-banner background-2blanks-1chain">
 		</div>
 		
 		<div class="hero-body" id="actu">
