--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg);
 		}
+		.background-blank-1chain {
+			/* The image user */
+			background-image: url(https://cdn.discordapp.com/attachments/501009071365685249/812846520377933844/IMG_20210220_213332.jpg);
+		}
 		.background-2blanks-1chain {
 			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/812778846465949696/IMG_20210220_211229.jpg);
@@ -373,7 +377,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner background-2blanks-1chain">
+		<div class="hero-body background-banner background-blank-1chain">
 		</div>
 		
 		<div class="hero-body" id="actu">
@@ -448,7 +452,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner background-2Dplan-robot">
+		<div class="hero-body background-banner background-2blanks-1chain">
 		</div>
 		
 		<div class="hero-body" id="galerie">
