--- a/index.html
+++ b/index.html
@@ -427,21 +427,21 @@
 					<div class="tile is-ancestor">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
-								<figure class="image is-4by3">
+								<figure class="image">
 									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812418638921465896/IMG_20210219_212007.jpg" alt="Un maillon imrpimé">
 								</figure>
 							</div>
 						</div>
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
-								<figure class="image is-4by3">
+								<figure class="image">
 									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812451354441285632/IMG_20210219_233010.jpg" alt="7 maillons de chaîne">
 								</figure>
 							</div>
 						</div>
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
-								<figure class="image is-4by3">
+								<figure class="image">
 									<img src="https://media.discordapp.net/attachments/807610088361164810/812453817111019580/IMG_20210219_234100.jpg" alt="8 maillons de chaîne">
 								</figure>
 							</div>
@@ -463,21 +463,21 @@
 				<div class="tile is-ancestor">
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
-							<figure class="image is-4by3">
+							<figure class="image">
 								<img src="http://arduitank.be/img/banner.png" alt="Plan 2D du robot">
 							</figure>
 						</div>
 					</div>
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
-							<figure class="image is-4by3">
+							<figure class="image">
 								<img src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="8 maillons de chaine">
 							</figure>
 						</div>
 					</div>
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
-							<figure class="image is-4by3">
+							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg" alt="Une chaîne complète">
 							</figure>
 						</div>
