--- a/index.html
+++ b/index.html
@@ -428,21 +428,21 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812418638921465896/IMG_20210219_212007.jpg" alt="Un maillon imrpimé">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812418638921465896/IMG_20210219_212007.jpg" alt="Un maillon imrpimé" style="padding: 0;">
 								</figure>
 							</div>
 						</div>
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812451354441285632/IMG_20210219_233010.jpg" alt="7 maillons de chaîne">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812451354441285632/IMG_20210219_233010.jpg" alt="7 maillons de chaîne" style="padding: 0;">
 								</figure>
 							</div>
 						</div>
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://media.discordapp.net/attachments/807610088361164810/812453817111019580/IMG_20210219_234100.jpg" alt="8 maillons de chaîne">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/812453817111019580/IMG_20210219_234100.jpg" alt="8 maillons de chaîne" style="padding: 0;">
 								</figure>
 							</div>
 						</div>
