--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
 		.label {
 			color: white;
 		}
+		p a.is-link {
+			color: #3273dc;
+		}
+		p a.is-link:hover {
+			color: #363636;
+		}
 
 
 		div {
