--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
 			color: white;
 		}
 		p a.is-link {
-			color: #3273dc;
+			color: #3273dc!important;
 		}
 		p a.is-link:hover {
-			color: #363636;
+			color: #363636!important;
 		}
 
 
