--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812406562571812924/IMG_20210219_203215.jpg" alt="Chaîne en TPU fail moitié impression">
 					<p style="padding: 0 18px;">Nous ne baissons pas les bras !! Mais afin d'éviter de perdre trop de temps sur le réglage pour du TPU, reprenons ce que nous savons faire, le PLA !</p>
 					<p style="padding: 0 18px;">Le temps d'un redesign de la chaîne qui devient une multitude de maillons !</p>
-					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="Chaîne avec maillons">
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="Chaîne avec maillons modélisation 3D">
 					<p style="padding: 0 18px">Forcément, on imprime pas une chaine comme ça ! On aurait pu tenter mais ça aurait été risqué ! Nous avons fait maillon par maillon ! ;-)</p>
 					<div class="tile is-ancestor">
 						<div class="tile is-parent is-horizontal">
@@ -454,6 +454,53 @@
 						</div>
 					</div>
 					<p style="padding: 0 18px 1rem 18px;">C'est que cela prend forme tout ça !! Une nuit et tout sera imrpimé ! :p</p>
+				</div>
+				<button type="button" class="collapsible">20/02/2021 - Impression 3D chaîne et engrange & CNC flancs du tank</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">La machine Davide est en reoute, on ne l'arrête plus !</p>
+					<p style="padding: 0 18px;">Tous les maillons sont imprimés reste plus qu'à en faire une belle chaîne :</p>
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg" alt="Chaîne avec maillons">
+					<p style="padding: 0 18px;">Bon, la chaine c'ext bien mais il faut bien savoir la faire tourner si on veut avancer ! C'est donc au tour de la roue dentée à être imprimée !</p>
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812719872421003344/IMG_20210220_171734.jpg" alt="Roue dentée avec chaîne">
+					<p style="padding: 0 18px">Quand je disais que l'on arrêtais plus Davide... c'est pas pour rien !</p>
+					<br>
+					<p style="padding: 0 18px">Il a continué avec la CNC cette fois ! C'est vrai que c'est plus joli de voir en vrai, ce que ça donne avec un côté.</p>
+					<p style="padding: 0 18px">La chaine parait un peu courte, on rajoutera un maillon.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812784212603437056/IMG_20210220_213332.jpg" alt="Roue dentée avec chaîne et un côté du tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/812770439059079229/IMG_20210220_203901.jpg" alt="Roue dentée avec chaîne et un côté du tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px">Le mouvement perpetuel Davide continue son cours ! Après un flanc, pourquoi pas 2 ?</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812775608404541490/IMG_20210220_205849.jpg" alt="CNC creuse deuxième flanc tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812778846465949696/IMG_20210220_211229.jpg" alt="Roue dentée avec chaîne et deux côtés du tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px">Nous voici bien avancé pour la partie physique du robot, mais il n'y a pas que Davide qui a travaillé ! Regardez la partie plan 2D de la télécommande juste en dessous !</p>
+					<p style="padding: 0 18px 1rem 18px;">Pour Davide, comme on ne l'arrête plus, il a continuer toute la nuit et voilà que le tank est désormais totalement terminé ! Non c'est une blague, faut quand même pas abuser !</p>
 				</div>
 			</div>
 		</div>
