--- a/index.html
+++ b/index.html
@@ -398,21 +398,21 @@
 				<button type="button" class="collapsible">10/02/2021 - Nom de domaine</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a class="is-link" href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
-					<p style="padding: 0 18px 1rem 18px;">Nous avons donc activé l'hébergement lié avec l'offre.</p>
+					<p style="padding: 0 18px 2rem 18px;">Nous avons donc activé l'hébergement lié avec l'offre.</p>
 				</div>
 				<button type="button" class="collapsible">10/02/2021 - Reconnaissance vocal</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Ugo, pour l'interface (application) a développé un code qui utilise <a class="is-link" href="https://cloud.google.com/speech-to-text" target="_blank">la détection de voix avec Google</a>.</p>
 					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
 					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
-					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
+					<img style="padding: 0 18px 2rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
 					<!--<p style="padding: 0 18px 1rem 18px;">Fichier développé <a class="is-link" href="https://cdn.discordapp.com/attachments/807610088361164810/809157469791191070/APPLI_VOCAL.py" target="_blank">ici</a></p>-->
 				</div>
 				<button type="button" class="collapsible">16/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">On entame la modélisation 3D sur Fusion 360 !</p>
 					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenage et "roues".</p>
-					<p style="padding: 0 18px 1rem 18px;">Hâte de voir ça fonctionnel ! Pas vous ?</p>
+					<p style="padding: 0 18px 2rem 18px;">Hâte de voir ça fonctionnel ! Pas vous ?</p>
 				</div>
 				<button type="button" class="collapsible">17/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
 				<div class="content collapse is-medium">
@@ -420,7 +420,7 @@
 					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
 					<p style="padding: 0 18px;">Les différents éléments électronique servant pour le robot sont importés dans Fusion 360. Nous retrouvons, le RFID, l'ultrason, le servo moteur, le moteur pas à pas et évidement l'arduino nano.</p>
 					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester somairement lors d'un test.</p>
-					<p style="padding: 0 18px 1rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
+					<p style="padding: 0 18px 2rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
 				</div>
 				<button type="button" class="collapsible">19/02/2021 - Impression 3D chaîne - Echec TPU, redesign</button>
 				<div class="content collapse is-medium">
@@ -453,14 +453,14 @@
 							</div>
 						</div>
 					</div>
-					<p style="padding: 0 18px 1rem 18px;">C'est que cela prend forme tout ça !! Une nuit et tout sera imrpimé ! :p</p>
+					<p style="padding: 0 18px 2rem 18px;">C'est que cela prend forme tout ça !! Une nuit et tout sera imrpimé ! :p</p>
 				</div>
 				<button type="button" class="collapsible">20/02/2021 - Impression 3D chaîne et engrange & CNC flancs du tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">La machine Davide est en reoute, on ne l'arrête plus !</p>
 					<p style="padding: 0 18px;">Tous les maillons sont imprimés reste plus qu'à en faire une belle chaîne :</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg" alt="Chaîne avec maillons">
-					<p style="padding: 0 18px;">Bon, la chaine c'ext bien mais il faut bien savoir la faire tourner si on veut avancer ! C'est donc au tour de la roue dentée à être imprimée !</p>
+					<p style="padding: 0 18px;">Bon, la chaine c'est bien mais il faut savoir la faire tourner si on veut avancer ! C'est donc au tour de la roue dentée à être imprimée !</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812719872421003344/IMG_20210220_171734.jpg" alt="Roue dentée avec chaîne">
 					<p style="padding: 0 18px">Quand je disais que l'on arrêtais plus Davide... c'est pas pour rien !</p>
 					<br>
@@ -500,7 +500,7 @@
 						</div>
 					</div>
 					<p style="padding: 0 18px">Nous voici bien avancé pour la partie physique du robot, mais il n'y a pas que Davide qui a travaillé ! Regardez la partie plan 2D de la télécommande juste en dessous !</p>
-					<p style="padding: 0 18px 1rem 18px;">Pour Davide, comme on ne l'arrête plus, il a continuer toute la nuit et voilà que le tank est désormais totalement terminé ! Non c'est une blague, faut quand même pas abuser !</p>
+					<p style="padding: 0 18px 2rem 18px;">Pour Davide, comme on ne l'arrête plus, il a continuer toute la nuit et voilà que le tank est désormais totalement terminé ! Non c'est une blague, faut quand même pas abuser !</p>
 				</div>
 			</div>
 		</div>
