--- a/index.html
+++ b/index.html
@@ -502,6 +502,13 @@
 					<p style="padding: 0 18px">Nous voici bien avancé pour la partie physique du robot, mais il n'y a pas que Davide qui a travaillé ! Regardez la partie plan 2D de la télécommande juste en dessous !</p>
 					<p style="padding: 0 18px 2rem 18px;">Pour Davide, comme on ne l'arrête plus, il a continuer toute la nuit et voilà que le tank est désormais totalement terminé ! Non c'est une blague, faut quand même pas abuser !</p>
 				</div>
+				<button type="button" class="collapsible">20/02/2021 - Plan 2D - Télécommande</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">C'est bien d'avancer côté robot/tank, mais la télécommande est également très importante !</p>
+					<p style="padding: 0 18px;">Voici donc la réalisation en 2D de la télécommande qui servira à piloter le robot ! Celle-ci a été designé par Ugo.</p>
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
+					<p style="padding: 0 18px 2rem 18px;">Au même titre que "Pas de bras, pas de chocolat", ici c'est : Pas de télécommande, pas de robot tank !</p>
+				</div>
 			</div>
 		</div>
 
