--- a/index.html
+++ b/index.html
@@ -538,6 +538,13 @@
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
+								<img src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg" alt="Une chaîne complète">
 							</figure>
 						</div>
