--- a/index.html
+++ b/index.html
@@ -531,8 +531,8 @@
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								<img style="padding: .75rem;" src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="8 maillons de chaine">
-								<img style="padding: .75rem;" src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
+								<img style="padding: 0 0 .75rem 0;" src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="8 maillons de chaine">
+								<img style="padding: 0 .75rem 0 0;" src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
 							</figure>
 						</div>
 					</div>
