--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
 	<style>
+		/* Image for background */
 		.background-banner {
 			/* Set a specific height */
 			min-height: 500px; 
@@ -108,11 +109,14 @@
 			color: #363636!important;
 		}
 
+		/* Layout */
 
 		div {
 			transition-property: opacity, left, top, height;
 			transition-duration: 3s, 5s;
 		}
+
+		
 	</style>
 
 	<!-- Scrollbar -->
@@ -171,6 +175,7 @@
 			text-align: left;
 			outline: none;
 			font-size: 1.5rem;
+
 		}
 		
 		.active, .collapsible:hover {
@@ -302,7 +307,7 @@
 					<h2>Où en sommes-nous ?</h1>
 					<p>Nous avons un projet ambitieux ! Mais nous sommes motivés !</p>
 					<p>Pour savoir un peu où nous en sommes :</p>
-					<p>Arduino (tous) :</p>
+					<p class="is-5">Arduino (tous) :</p>
 					<progress class="progress is-arduino1" style="height: 1.5rem;" value="5" max="100">5%</progress>
 					<div class="columns is-mobile">
 						<div class="column is-4-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
@@ -316,9 +321,9 @@
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
 					</div>
-					<p>Application (Davide et Ugo) :</p>
+					<p class="is-5">Application (Davide et Ugo) :</p>
 					<progress class="progress" style="height: 1.5rem;" value="30" max="100">30%</progress>
-					<p>Site (Antonin) :</p>
+					<p class="is-5">Site (Antonin) :</p>
 					<progress class="progress is-info" style="height: 1.5rem;" value="35" max="100">35%</progress>
 				</div>
 			</div>
