--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <body>
 	<section class="hero is-dark is-fullheight">
 		<div class="hero-head">
-			<nav class="navbar" role="navigation" aria-label="main navigation">
+			<nav class="has-navbar-fixed-top" role="navigation" aria-label="main navigation">
 				<div class="container">
 					<div class="navbar-brand">
 						<a class="navbar-item" href="./">
@@ -307,7 +307,7 @@
 					<h2>Où en sommes-nous ?</h1>
 					<p>Nous avons un projet ambitieux ! Mais nous sommes motivés !</p>
 					<p>Pour savoir un peu où nous en sommes :</p>
-					<p class="is-5">Arduino (tous) :</p>
+					<p style="font-size:1.2em;">Arduino (tous) :</p>
 					<progress class="progress is-arduino1" style="height: 1.5rem;" value="5" max="100">5%</progress>
 					<div class="columns is-mobile">
 						<div class="column is-4-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
@@ -321,9 +321,9 @@
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
 					</div>
-					<p class="is-5">Application (Davide et Ugo) :</p>
+					<p style="font-size:1.2em;">Application (Davide et Ugo) :</p>
 					<progress class="progress" style="height: 1.5rem;" value="30" max="100">30%</progress>
-					<p class="is-5">Site (Antonin) :</p>
+					<p style="font-size:1.2em;">Site (Antonin) :</p>
 					<progress class="progress is-info" style="height: 1.5rem;" value="35" max="100">35%</progress>
 				</div>
 			</div>
