--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" style="overflow-y: auto;" class="has-navbar-fixed-top">
+<html lang="fr" style="overflow-y: auto;">
 <head>
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -206,7 +206,7 @@
 <body>
 	<section class="hero is-dark is-fullheight">
 		<div class="hero-head">
-			<nav class="navbar" role="navigation" aria-label="main navigation">
+			<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
 				<div class="container">
 					<div class="navbar-brand">
 						<a class="navbar-item" href="./">
