--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 		/* Colors */
 		nav.navbar {
-			background-color: #363636;
+			background-color: #363636!important;
 		}
 		.content h2 {
 			color: white;
