--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
 
 		}
 		
-		.active, .collapsible:hover {
+		.collapsible.active, .collapsible:hover {
 			background-color: #555;
+			border-radius: 20px 20px 0 0;
 		}
 		
 		.collapsible:after {
