--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 			overflow: hidden;
 			transition: max-height 1s ease-out;
 			background-color: #1d1d1d;
+			border-radius: 0 0 20px 20px;
 		}
 	</style>
 </head>
