--- a/index.html
+++ b/index.html
@@ -184,9 +184,12 @@
 		
 		.collapsible.active, .collapsible:hover {
 			background-color: #555;
-			border-radius: 20px 20px 0 0;
 		}
 		
+		.collapsible.active {
+			border-radius: 20px 20px 0 0;
+		}
+
 		.collapsible:after {
 			content: '\02C5';
 			color: white;
