--- a/index.html
+++ b/index.html
@@ -961,6 +961,19 @@
 				</form>
 			</div>
 		</div>
+
+		<div class="hero-foot">
+			<nav class="tabs is-boxed is-fullwidth">
+				<ul class="has-text-centered" style="border-bottom-style: none;">
+					<li>
+						Créé le 10/02/2020
+					</li>
+					<li>
+						Par AntoDB
+					</li>
+				</ul>
+			</nav>
+		</div>
 	</section>
 
 	<button onclick="topFunction()" id="scroll_to_top" title="Go to top">
