--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
 			color: #363636!important;
 		}
 
-		/* Layout */
+		.hero-foot {
+			color: #545454;
+		}
 
+		/* Layout */
 		div {
 			transition-property: opacity, left, top, height;
 			transition-duration: 3s, 5s;
