--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 	<meta property="og:type" content="website" class="next-head" />
 	<meta property="og:url" content="https://arduitank.be" class="next-head" />
 	<meta property="og:description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé.">
-	<meta property="og:image" content="https://arduitank.be/img/banner.png" class="next-head">
+	<meta property="og:image" content="http://arduitank.be/img/banner.png" class="next-head">
 
 	<meta name="twitter:card" content="summary_large_image" class="next-head" />
 	<meta name="twitter:title" content="ArduiTank | Accueil" class="next-head" />
 	<meta name="twitter:url" content="https://arduitank.be" />
 	<meta name="twitter:description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé." class="next-head">
 	<meta name="twitter:creator" content="@ArduiTank" class="next-head">
-	<meta name="twitter:image:src" content="https://arduitank.be/img/banner.png" class="next-head">
+	<meta name="twitter:image:src" content="http://arduitank.be/img/banner.png" class="next-head">
 
 	<meta name="dcterms.title" content="ArduiTank | Accueil" class="next-head" />
 	<meta name="dcterms.type" content="Text" class="next-head" />
@@ -299,8 +299,8 @@
 				</p>
 				<div class="content is-large">
 					<h2>Qui sommes-nous ?</h1>
-					<p>Nous sommes en 2ème année en école supérieur en automatisation. Dans le cadre du cours de robotique, nous avons décidé de faire un tank télécommandé.</p>
-					<p>Nous ne nous limitons pas qu'à de la programmation en C/C++ (Arduino) comme demandé, en effet nous développons aussi une application pour ordinateur ainsi que le site sur lequel vous vous trouvez actuellement.</p>
+					<p>Nous sommes en 2ème année en école supérieure en automatisation. Dans le cadre du cours de robotique, nous avons décidé de faire un tank télécommandé.</p>
+					<p>Nous ne nous limitons pas qu'à la programmation en C/C++ (Arduino) comme demandé, en effet nous développons aussi une application pour ordinateur ainsi que le site sur lequel vous vous trouvez actuellement.</p>
 					<h2>Consignes</h2>
 					<h4>Purement pour le cours, nous devons respecter ces consignes :</h4>
 					<ul>
@@ -317,7 +317,7 @@
 						<li>Buzzer (optionnel)</li>
 					</ul>
 					<h2>Où en sommes-nous ?</h1>
-					<p>Nous avons un projet ambitieux ! Mais nous sommes motivés !</p>
+					<p>Nous avons un projet ambitieux ! Nous sommes motivés !</p>
 					<p>Pour savoir un peu où nous en sommes :</p>
 					<p style="font-size:1.2em;">Arduino (tous) :</p>
 					<progress class="progress is-arduino1" style="height: 1.5rem;" value="5" max="100">5%</progress>
@@ -414,8 +414,9 @@
 				</div>
 				<button type="button" class="collapsible">10/02/2021 - Nom de domaine</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté artuitank.be chez <a class="is-link" href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
-					<p style="padding: 0 18px 2rem 18px;">Nous avons donc activé l'hébergement lié avec l'offre.</p>
+					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté arduitank.be chez <a class="is-link" href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
+					<p style="padding: 0 18px">Nous avons donc activé l'hébergement lié avec l'offre.</p>
+					<p style="padding: 0 18px 2rem 18px;">C'est le début du développement site !</p>
 				</div>
 				<button type="button" class="collapsible">10/02/2021 - Reconnaissance vocal</button>
 				<div class="content collapse is-medium">
@@ -423,20 +424,19 @@
 					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
 					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
 					<img style="padding: 0 18px 2rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
-					<!--<p style="padding: 0 18px 1rem 18px;">Fichier développé <a class="is-link" href="https://cdn.discordapp.com/attachments/807610088361164810/809157469791191070/APPLI_VOCAL.py" target="_blank">ici</a></p>-->
 				</div>
 				<button type="button" class="collapsible">16/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">On entame la modélisation 3D sur Fusion 360 !</p>
-					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenage et "roues".</p>
+					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenages et "roues".</p>
 					<p style="padding: 0 18px 2rem 18px;">Hâte de voir ça fonctionnel ! Pas vous ?</p>
 				</div>
 				<button type="button" class="collapsible">17/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Hop la boum ! La suite continue !</p>
 					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
-					<p style="padding: 0 18px;">Les différents éléments électronique servant pour le robot sont importés dans Fusion 360. Nous retrouvons, le RFID, l'ultrason, le servo moteur, le moteur pas à pas et évidement l'arduino nano.</p>
-					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester somairement lors d'un test.</p>
+					<p style="padding: 0 18px;">Les différents éléments électronique servant pour le robot sont importés dans Fusion 360. Nous retrouvons : le RFID, l'ultrason, le servo moteur, le moteur pas à pas et évidement l'arduino nano.</p>
+					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester sommairement lors d'un test.</p>
 					<p style="padding: 0 18px 2rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
 				</div>
 				<button type="button" class="collapsible">19/02/2021 - Impression 3D chaîne - Echec TPU, redesign</button>
@@ -446,7 +446,7 @@
 					<p style="padding: 0 18px;">Nous ne baissons pas les bras !! Mais afin d'éviter de perdre trop de temps sur le réglage pour du TPU, reprenons ce que nous savons faire, le PLA !</p>
 					<p style="padding: 0 18px;">Le temps d'un redesign de la chaîne qui devient une multitude de maillons !</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="Chaîne avec maillons modélisation 3D">
-					<p style="padding: 0 18px">Forcément, on imprime pas une chaine comme ça ! On aurait pu tenter mais ça aurait été risqué ! Nous avons fait maillon par maillon ! ;-)</p>
+					<p style="padding: 0 18px">Forcément, on imprime pas une chaîne comme ça ! On aurait pu tenter mais ça aurait été risqué ! Nous avons fait maillon par maillon ! ;-)</p>
 					<div class="tile is-ancestor">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
@@ -474,7 +474,7 @@
 				</div>
 				<button type="button" class="collapsible">20/02/2021 - Impression 3D chaîne et engrange & CNC flancs du tank</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">La machine Davide est en reoute, on ne l'arrête plus !</p>
+					<p style="padding: 1rem 18px 0 18px;">La machine Davide est en route, on ne l'arrête plus !</p>
 					<p style="padding: 0 18px;">Tous les maillons sont imprimés reste plus qu'à en faire une belle chaîne :</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg" alt="Chaîne avec maillons">
 					<p style="padding: 0 18px;">Bon, la chaine c'est bien mais il faut savoir la faire tourner si on veut avancer ! C'est donc au tour de la roue dentée à être imprimée !</p>
@@ -517,7 +517,7 @@
 						</div>
 					</div>
 					<p style="padding: 0 18px">Nous voici bien avancé pour la partie physique du robot, mais il n'y a pas que Davide qui a travaillé ! Regardez la partie plan 2D de la télécommande juste en dessous !</p>
-					<p style="padding: 0 18px 2rem 18px;">Pour Davide, comme on ne l'arrête plus, il a continuer toute la nuit et voilà que le tank est désormais totalement terminé ! Non c'est une blague, faut quand même pas abuser !</p>
+					<p style="padding: 0 18px 2rem 18px;">Pour Davide, comme on ne l'arrête plus, il a continué toute la nuit et voilà que le tank est désormais totalement terminé ! Non c'est une blague, faut quand même pas abuser !</p>
 				</div>
 				<button type="button" class="collapsible">20/02/2021 - Plan 2D - Télécommande</button>
 				<div class="content collapse is-medium">
