--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 			outline: none;
 			font-size: 1.5rem;
 			border-radius: 20px;
-
+			transition-duration: 1s;
+			transition-delay: 2s;
 		}
 		
 		.collapsible.active, .collapsible:hover {
